node/supernode fix

--- a/src/content/docs/builders/chain-operators/overview.mdx
+++ b/src/content/docs/builders/chain-operators/overview.mdx
@@ -6,7 +6,7 @@ description: Overview for operators of SKALE Chains
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
 The SKALE Network is a multi-chain network where "owning" or "operating" a SKALE Chain
-does not require the owner or operator to actually run the nodes. This is because the SKALE Network
+does not require the owner or operator to actually run the supernodes. This is because the SKALE Network
 has validators to run the SKALE Chains.
 
 The operator(s) of a SKALE Chain have special privileges that enable them to manage the chain and provide
