--- a/src/content/docs/builders/node-operators/overview.mdx
+++ b/src/content/docs/builders/node-operators/overview.mdx
@@ -10,7 +10,7 @@ The SKALE network comprises various types of nodes and software designed to ensu
 
 <CardGrid>
 	<LinkCard
-		title="SKALE Node"
+		title="SKALE Supernode"
 		href="/builders/node-operators/skale-nodes"
 	/>
     <LinkCard
