--- a/src/content/docs/ecosystem/validators/overview.mdx
+++ b/src/content/docs/ecosystem/validators/overview.mdx
@@ -9,9 +9,10 @@ and are built for best-in-class UX.
 SKALE is unique from other blockchain networks. The SKALE Network has a pool of validators that work together
 to secure the network. These validators provide computation power to the SKALE Network by deploying SKALE Supernodes.
 The collection of validators and the supernode(s) they spin up represent the entire validator network that performs
-work for SKALE Chains (a Layer-1 Ethereum Compatible Chain). Each SKALE Chain in the network is operated by a
-group of virtualized nodes selected from a subset of the supernodes run by validators in the SKALE network and
-are run on all or a subset [multi-tenancy] of each supernode’s computation and storage resources.
+work for SKALE Chains (a Layer-1 Ethereum Compatible Chain). 
+
+Each SKALE Chain in the network is operated by a group of virtualized nodes selected from a subset of the supernodes run by validators, 
+utilizing either all or part of the supernode's computational and storage resources [multi-tenancy].
 
 As each supernode in the network continues to participate in their assigned SKALE Chains, they are awarded
 bounties based on their performance at the end of each network epoch. Each supernode is monitored by their peer
@@ -39,8 +40,7 @@ Please explore the following links to learn more about the SKALE Token Economics
 - Running the latest SKALE Node software releases
 - Participation in governance (when applicable)
 
-To encourage proper behavior among network participants, SKALE follows a Proof of Stake (PoS) system whereby each supernode must
-stake a predetermined amount of SKALE tokens to be slashed at the citation of any activity not condoned by the network.
+To promote proper behavior, SKALE uses a Proof of Stake (PoS) system, requiring each supernode to stake a set amount of SKALE tokens, which can be slashed for any network-prohibited activity.
 
 Activities not approved by the network include those which denote a failure to properly participate in each assigned SKALE
 Chain’s consensus, and maintain uptime and latency standards enforced by the Service Level Agreement (SLA).
