--- a/src/content/docs/ecosystem/validators/compliance-requirements.mdx
+++ b/src/content/docs/ecosystem/validators/compliance-requirements.mdx
@@ -6,19 +6,19 @@ description: Requirements for Validator Compliance
 import { Aside } from "@astrojs/starlight/components";
 import { hardware } from "../../../../config";
 
-The following document outlines compliance requirements for SKALE Network nodes.
-Failure to follow these requirements will result in a node forfeiting bounty for each month
+The following document outlines compliance requirements for SKALE Network supernodes.
+Failure to follow these requirements will result in a supernodes forfeiting bounty for each month
 that it's not in compliance as well as SKALE Chain payment claims. Please be sure to follow
 the entire proper setup and backup procedures described in Validator Denali Upgrade documentation
-to ensure your node is operating as intended.
+to ensure your supernodes is operating as intended.
 
 ## Compliance Requirements
 
-The following compliance requirements are required to ensure all nodes meet a standard of performance.
+The following compliance requirements are required to ensure all supernodes meet a standard of performance.
 
 <Aside type="caution">
-Failure to meet ANY ONE of the following Denali compliance requirements will result in a node being
-marked “Out of Compliance” by the NODE Foundation and the node may be forced to forfeit monthly bounties
+Failure to meet ANY ONE of the following Denali compliance requirements will result in a supernode being
+marked “Out of Compliance” by the NODE Foundation and the supernode may be forced to forfeit monthly bounties
 if it is unable to return to "In Compliance" by the time the monthly `getBounty` is called.
 </Aside>
 
@@ -28,14 +28,14 @@ Compliance requirements may be reviewed and modified at any given time.
 
 ## General Check
 
-Node operators can use this general PASS/FAIL check to confirm whether a node meets the compliance requirements.
+Supernode operators can use this general PASS/FAIL check to confirm whether a supernode meets the compliance requirements.
 
 https://dune.com/skale/metrics
 
 ## Wallet Balances
 
 - At least 0.5 ETH in self-recharging validator wallet (should be >= NODES_NUMBER * 0.5)
-- At least 1 ETH in each node wallet
+- At least 1 ETH in each supernode wallet
 
 ## Hardware
 
@@ -56,18 +56,18 @@ Example response:
 
 ## Networking
 
-- Non-expired SSL certificates for each node.
+- Non-expired SSL certificates for each supernode.
     - The certificate file should be issued in PEM format, issued by a trusted authority, and contain a full certificate chain.
     - Certificate should always be renewed to avoid expiry
 
-- Don't touch machine firewall (iptables installed by skale node software automatically sets machine firewall rules), external
+- Don't touch machine firewall (iptables installed by skale supernode software automatically sets machine firewall rules), external
 VPC or networking firewall ensure __some_port_range__.
 
 ## Servers
 
 ### SGXWallet
 
-- 1 SGX server for up to 5 SKALE nodes (not tested, but required)
+- 1 SGX server for up to 5 SKALE supernodes (not tested, but required)
 - 6 cores (not tested, but required)
 - 8GB RAM (not tested, but required)
 
@@ -80,7 +80,7 @@ Example response:
 
 ### ETH Mainnet Endpoint
 
-After The Merge a Mainnet node operator must run both an execution client and a consensus client at the same time. 
+After the merge a Mainnet supernode operator must run both an execution client and a consensus client at the same time. 
 
 <Aside type="note">
 It is a requirement to run Geth as an execution client. 
@@ -103,11 +103,11 @@ Latest Mainnet software versions are defined here:
 - [Mainnet Versions](#mainnetversions)
 - https://github.com/skalenetwork/skale-network/tree/master/releases
 
-- Node software versions must be updated to the latest Denali requirements
+- Supernode software versions must be updated to the latest Denali requirements
 - SGXWallet software versions must be updated to the latest Denali requirements
 - SGX container should be up and running and should be responding to health check request
-- FILEBEAT_HOST should be defined in .env and the filebeat container should be up and running. The node must be sending logs to elastic server
-- All skale-containers are always running on the node
+- FILEBEAT_HOST should be defined in .env and the filebeat container should be up and running. The supernode must be sending logs to elastic server
+- All skale-containers are always running on the supernode
     - filebeat
     - skale-admin
     - bounty
@@ -140,7 +140,7 @@ Example response:
 
 BTRFS kernel module must be enabled.  `http://YOUR_SKALE_NODE_IP:3009/status/btrfs` returns information about btrfs kernel module (enabled/disabled).
 
-Public IP must be the same as the registered node IP. `http://YOUR_SKALE_NODE_IP:3009/status/public-ip` returns public ip address (source of the packets that your node is sending to other nodes)
+Public IP must be the same as the registered supernode IP. `http://YOUR_SKALE_NODE_IP:3009/status/public-ip` returns public ip address (source of the packets that your supernode is sending to other supernodes)
 
 IMA Container must pass healthcheck. `http://YOUR_SKALE_NODE_IP:3009/status/ima` returns information about basic ima healthcheck
 
@@ -148,4 +148,4 @@ IMA Container must pass healthcheck. `http://YOUR_SKALE_NODE_IP:3009/status/ima`
 
 - Check key-cert pair validity using `http://YOUR_SKALE_NODE_IP:3009/status/ssl`
 - Test ssl certificates using `skale ssl check`
-- Don't touch machine firewall (iptables installed by skale node software automatically sets machine firewall rules), external VPC or networking firewall ensure Ports open on **80, 311, 443,** 3009, 8080, 9100, 10000–18192, and ICMP IPv4  (in other words, not closed by an external firewall).
+- Don't touch machine firewall (iptables installed by supernode node software automatically sets machine firewall rules), external VPC or networking firewall ensure Ports open on **80, 311, 443,** 3009, 8080, 9100, 10000–18192, and ICMP IPv4  (in other words, not closed by an external firewall).
