--- a/src/content/docs/ecosystem/validators/troubleshooting.mdx
+++ b/src/content/docs/ecosystem/validators/troubleshooting.mdx
@@ -16,9 +16,9 @@ See [Changing Node IP](/ecosystem/validators/node-cli/changing-node-ip) in the N
 <details>
 <summary>How should validators configure backup and restore?</summary>
 
-Validators are responsible for backing up everything on the node. SKALE Network relies on validators to complete the backup procedure for each of the nodes. SKALE Network replicates the data for each SKALE Chain across 16 nodes, adding an additional layer of data availability. If a node goes down for a long time, the other 2/3 of 15 will be responsible for taking the SKALE Chain's snapshot and shuffling the SKALE Chain in the SKALE Network. If a validator node is down for a long time, it may be reallocated to service new SKALE Chains depending on the length of the downtime.
+Validators are responsible for backing up everything on the supernode. SKALE Network relies on validators to complete the backup procedure for each of the supernodes. SKALE Network replicates the data for each SKALE Chain across 16 nodes, adding an additional layer of data availability. If a node goes down for a long time, the other 2/3 of 15 will be responsible for taking the SKALE Chain's snapshot and shuffling the SKALE Chain in the SKALE Network. If a validator supernode is down for a long time, it may be reallocated to service new SKALE Chains depending on the length of the downtime.
 
-Please check [node backup](https://github.com/skalenetwork/skale-node-cli/blob/develop/README.md#node-commands) and [sgx_backup](https://github.com/skalenetwork/sgxwallet/blob/develop/docs/backup-procedure.md) to learn more about how to back up the node or SGXWallet, and restore.
+Please check [supernode backup](https://github.com/skalenetwork/skale-node-cli/blob/develop/README.md#node-commands) and [sgx_backup](https://github.com/skalenetwork/sgxwallet/blob/develop/docs/backup-procedure.md) to learn more about how to back up the supernode or SGXWallet, and restore.
 </details>
 
 <details>
@@ -43,15 +43,15 @@ In this file, you can see all the SKALE Chain information:
 </details>
 
 <details>
-<summary>What are the following Node ports used for?</summary>
+<summary>What are the following Supernode ports used for?</summary>
 
 | Port               | Description                                                                                                                                                            | Notes                                                                                                                 |
 |--------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------|
-| 3009/TCP           | Watchdog service provides sla-agent and SKALE Monitoring/Metrics site with data about all containers' statuses on all SKALE nodes                                     | Used by nginx as reverse proxy for Flask-based Watchdog                                                             |
+| 3009/TCP           | Watchdog service provides sla-agent and SKALE Monitoring/Metrics site with data about all containers' statuses on all SKALE supernodes                                     | Used by nginx as reverse proxy for Flask-based Watchdog                                                             |
 | 8080/TCP           | Used by cAdvisor (Prometheus exporter) - to analyze and expose resource usage and performance data from running docker containers                                      | Running cAdvisor container is optional (MONITORING_CONTAINERS=True)                                                 |
 | 9100/TCP           | Used by Prometheus Node Exporter - to measure host resources such as memory, disk, and CPU utilization, etc.                                                         | Running Node exporter container is optional (MONITORING_CONTAINERS=True)                                            |
-| 22                 | Used by the node operator to ssh into the machine                                                                                                                   |                                                                                                                       |
-| 10000–11500/TCP    | These ports should be open for communications inside sChains between different nodes.                                                                                | When there are no sChains, these ports are closed by iptables rules. It’s important not to add another firewall, because sChain configuration is created dynamically as well as iptables rules. |
+| 22                 | Used by the supernode operator to ssh into the machine                                                                                                                   |                                                                                                                       |
+| 10000–11500/TCP    | These ports should be open for communications inside sChains between different supernodes.                                                                                | When there are no sChains, these ports are closed by iptables rules. It’s important not to add another firewall, because sChain configuration is created dynamically as well as iptables rules. |
 
 </details>
 <details>
@@ -60,9 +60,9 @@ Yes. However, you will need to make sure that your platform is compatible with S
 </details>
 
 <details>
-<summary>Where can I find the SKALE Node logs?</summary>
+<summary>Where can I find the SKALE Supernode logs?</summary>
 
-Validators can run these commands to check their logs in their node:
+Validators can run these commands to check their logs in their supernode:
 
 Here are some logs and commands you can use for troubleshooting or to provide logs to the core team. The most used and first place to look at:
 
@@ -88,7 +88,7 @@ All running containers logs:
 skale logs dump [PATH]
 ```
 
-SGX certification in validator node:
+SGX certification in validator supernode:
 
 ```shell
 ls -l ~/.skale/node_data/sgx_certs/
@@ -119,9 +119,9 @@ cat /var/log/docker-lvmpy/lvmpy.log
 SGXWallet may crash after a reboot if you didn't disable automatic updates. This is because SGXWallet is based on new low-level technology, and kernel updates may break the system. It's recommended to only update the SGXWallet server if there are critical security fixes.
 </details>
 <details>
-<summary>Node update procedure</summary>
+<summary>Supernode update procedure</summary>
 
-Updating system packages is an important part of node maintenance and security. Updates may contain fixes for recent security issues. However, newer updates may be incompatible with SKALE node software. Therefore, updating should be executed carefully.
+Updating system packages is an important part of supernode maintenance and security. Updates may contain fixes for recent security issues. However, newer updates may be incompatible with SKALE supernode software. Therefore, updating should be executed carefully.
 
 <Aside type="caution">
 Make sure that the infrastructure provider doesn't update packages after the system is restarted.
@@ -132,7 +132,7 @@ Critical risk (updates should be performed only if there are some messages from 
 <Aside type="note">
 Currently, SGX is tested on 4.15-* kernels. It's best to avoid minor version updates too.
 **High Risk** (updates should be avoided in general):
-- kernel on SKALE node server
+- kernel on SKALE supernode server
 - docker
 - docker-compose
 - btrfs-progs
