--- a/src/content/docs/ecosystem/validators/watchdog/overview.mdx
+++ b/src/content/docs/ecosystem/validators/watchdog/overview.mdx
@@ -5,19 +5,19 @@ description: Overview of SKALE Watchdog
 
 import { Aside, LinkCard } from "@astrojs/starlight/components";
 
-SKALE Watchdog is microservice running on every SKALE node for providing SLA agents with node
+SKALE Watchdog is microservice running on every SKALE supernode for providing SLA agents with supernode
 performance metrics. It also can be used for external monitoring goals (validators can use it in
 their monitoring tools).
 
 ## How It Works
 Watchdog is a Python script running in docker container with Flask web server that provides simple
 REST JSON API available on port 3009 (http://YOUR_SKALE_NODE_IP:3009). Currently, Watchdog can give
-data on all SKALE node docker containers, health checks of sChains and SGX server, Ethereum node endpoint
+data on all SKALE supernode docker containers, health checks of sChains and SGX server, Ethereum supernode endpoint
 status, and hardware information.
 
 <Aside type="note">
 Node CLI automatically opens port 3009 on the machine using iptables.
-Be sure that port 3009 is open for the node’s external network for Watchdog to work.
+Be sure that port 3009 is open for the supernode’s external network for Watchdog to work.
 </Aside>
 
 <LinkCard
