add privy wallet section

--- a/src/content/docs/builders/tools/contracts/index.mdx
+++ b/src/content/docs/builders/tools/contracts/index.mdx
@@ -23,12 +23,12 @@ Additionally, SKALE provides common industry contract features, including Multic
 	<LinkCard
 		title="Remix"
 		href="/builders/tools/contracts/remix"
-		description=""
+		description="Toolset for developing, deploying, debugging, and testing EVM-compatible smart contracts."
 	/>
 	<LinkCard
 		title="Openzeppelin"
 		href="/builders/tools/contracts/openzeppelin"
-		description=""
+		description="OpenZeppelin Contracts provide audited libraries of smart contracts and most ERC standards for Ethereum and other EVM blockchains."
 	/>
 	<LinkCard
 		title="Multicall"
