--- a/src/content/docs/builders/tools/wallets/aggregator.mdx
+++ b/src/content/docs/builders/tools/wallets/aggregator.mdx
@@ -7,6 +7,7 @@ import {Content as WalletConnect} from './aggregator/wallet-connect.mdx';
 import {Content as RainbowKit} from './aggregator/rainbowkit.mdx';
 import {Content as ConnectKit} from './aggregator/connectKit.mdx';
 import {Content as Dynamic} from './aggregator/dynamic-xyz.mdx';
+import {Content as Privy} from './aggregator/privy.mdx';
 
 
 <Tabs>
@@ -21,5 +22,8 @@ import {Content as Dynamic} from './aggregator/dynamic-xyz.mdx';
 </TabItem>
 <TabItem label="Dynamic">
 <Dynamic/>
+</TabItem>
+<TabItem label="Privy">
+<Privy/>
 </TabItem>
 </Tabs>
