--- a/src/content/docs/builders/tools/index.mdx
+++ b/src/content/docs/builders/tools/index.mdx
@@ -7,48 +7,20 @@ sidebar:
 ---
 
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
+import {Tools} from "../../../../components/ToolsList"
+
 
 The tools section covers available tooling for developing on SKALE. This includes SDKs, Wallets, Libraries, and more.
 
-## Explore Tools by Category
-
-
-
 <CardGrid>
 	<LinkCard
-		title="Wallets"
-		href="/builders/tools/wallets"
+		title="Discover Integrations"
+		href="/builders/tools#explore-tools-by-category"
 		/>
 	<LinkCard
-		title="Libraries"
-		href="/builders/tools/libraries"
-		/>
-	<LinkCard
-		title="NFTs"
-		href="/builders/tools/nfts"
-		/>
-	<LinkCard
-		title="Gaming SDKs"
-		href="/builders/tools/gaming"
-		/>
-	<LinkCard
-		title="Bridges"
-		href="/builders/tools/bridges"
-		/>
-	<LinkCard
-		title="Contracts"
-		href="/builders/tools/contracts"
-		/>
-	<LinkCard
-		title="Data & Indexers"
-		href="/builders/tools/data"
-		/>
-	<LinkCard
-		title="Oracles"
-		href="/builders/tools/oracles"
-		/>
-	<LinkCard
-		title="Payments"
-		href="/builders/tools/payments"
+		title="Add your Integration"
+		href="https://github.com/skalenetwork/docs.skale.space/tree/main/src/content/docs/builders/tools"
 		/>
 </CardGrid>
+
+<Tools client:load/>
