--- a/src/content/docs/builders/tools/wallets/privy.mdx
+++ b/src/content/docs/builders/tools/wallets/privy.mdx
@@ -2,7 +2,7 @@
 title: Privy
 description: Intro to Privy
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { Aside } from '@astrojs/starlight/components';
