--- a/src/content/docs/quick-start/deploy-to-testnet.mdx
+++ b/src/content/docs/quick-start/deploy-to-testnet.mdx
@@ -18,7 +18,7 @@ no worries, join us in [Discord](https://discord.com/invite/gM5XBy6) for additio
 select the Calypso Hub.
 
 <br />
-<SelectChain client:load />
+<SelectChain  />
 <GasAndTokens client:load />
 
 ## Deploy to SKALE
