--- a/src/content/docs/ecosystem/delegators/overview.mdx
+++ b/src/content/docs/ecosystem/delegators/overview.mdx
@@ -37,7 +37,7 @@ to ensure that tokens are not actively delegated.
 
 The SKL token provides critical utility to the SKALE Network.
 SKL token holders have the ability to delegate their tokens to validator
-who in turn stake the tokens to create SKALE Supernodes. Delegations help
+who in turn stake the tokens to create SKALE supernodes. Delegations help
 secure the network and in return receive bounty rewards. Delegators
 can delegate to multiple validators.
 
