--- a/src/content/docs/ecosystem/validators/validator-setup.mdx
+++ b/src/content/docs/ecosystem/validators/validator-setup.mdx
@@ -536,7 +536,7 @@ import { PostRegistrationChecklist } from "../../../../components/PostRegistrati
     - `TG_API_KEY` - Telegram API key
     - `TG_CHAT_ID` - Telegram chat ID
 
-    ### 3.8 Initialize supernode
+    ### 3.8 Initialize Supernode
 
     To install supernode on your server you should run `skale node init`. It will create necessary configuration files and run base services and containers. 
 
