--- a/src/content/docs/ecosystem/validators/validator-cli/overview.mdx
+++ b/src/content/docs/ecosystem/validators/validator-cli/overview.mdx
@@ -3,11 +3,11 @@ title: Validator CLI
 description: The Validator CLI offers key tools for SKALE Network validators
 ---
 
-On the **SKALE network**, the **validator CLI** (Command Line Interface) is a tool used by validators to interact with the network and manage their validator supernodes. Validators play a crucial role in validating transactions, producing blocks, and maintaining the security of the network. Below are some of the main functions of the validator CLI:
+On the **SKALE Network**, the **validator CLI** (Command Line Interface) is a tool used by validators to interact with the network and manage their validator supernodes. Validators play a crucial role in validating transactions, producing blocks, and maintaining the security of the network. Below are some of the main functions of the validator CLI:
 
 ## Node Management
 Validators can use the CLI to:
-- Start, stop, and monitor their supernodes on the SKALE network.
+- Start, stop, and monitor their supernodes on the SKALE Network.
 
 ## Staking Operations
 Validators can:
@@ -20,7 +20,7 @@ The CLI is useful for:
 
 ## Validator Registration
 Validators can:
-- Register their supernodes on the SKALE network, enabling them to participate in the consensus process.
+- Register their supernodes on the SKALE Network, enabling them to participate in the consensus process.
 
 ## Monitoring and Debugging
 The CLI allows validators to:
