--- a/src/content/docs/ecosystem/validators/watchdog/overview.mdx
+++ b/src/content/docs/ecosystem/validators/watchdog/overview.mdx
@@ -12,7 +12,7 @@ their monitoring tools).
 ## How It Works
 Watchdog is a Python script running in docker container with Flask web server that provides simple
 REST JSON API available on port 3009 (http://YOUR_SKALE_NODE_IP:3009). Currently, Watchdog can give
-data on all SKALE supernode docker containers, health checks of sChains and SGX server, Ethereum supernode endpoint
+data on all SKALE supernode docker containers, health checks of sChains and SGX server, Ethereum node endpoint
 status, and hardware information.
 
 <Aside type="note">
