verbiage RNG fix

--- a/src/content/docs/builders/tools/rng/index.mdx
+++ b/src/content/docs/builders/tools/rng/index.mdx
@@ -21,6 +21,6 @@ SKALE Chains all come with the RNG endpoint available directly in Solidity with 
 	<LinkCard
 		title="SKALE RNG"
 		href="/builders/tools/rng/skale-rng"
-		description="SKALE Native Oracle"
+		description="SKALE Native Random Number Generator"
 	/>
 </CardGrid>
