supernode verbiage fix

--- a/src/content/docs/ecosystem/validators/overview.mdx
+++ b/src/content/docs/ecosystem/validators/overview.mdx
@@ -7,7 +7,7 @@ SKALE is a network of Layer-1 blockchains which have zero gas fees, infinite sca
 and are built for best-in-class UX.
 
 SKALE is unique from other blockchain networks. The SKALE Network has a pool of validators that work together
-to secure the network. These validators provide computation power to the SKALE Network by deploying SKALE Supernodes.
+to secure the network. These validators provide computation power to the SKALE Network by deploying SKALE supernodes.
 The collection of validators and the supernode(s) they spin up represent the entire validator network that performs
 work for SKALE Chains (a Layer-1 Ethereum Compatible Chain). 
 
