--- a/src/content/docs/ecosystem/validators/swap-limit-fix.mdx
+++ b/src/content/docs/ecosystem/validators/swap-limit-fix.mdx
@@ -109,7 +109,7 @@ Follow these steps to enable swap limiting capability:
 
    For more details on this process, you can refer to this [Unix Stack Exchange thread](https://unix.stackexchange.com/questions/342735/docker-warning-no-swap-limit-support).
 
-8. After the supernode is turned on, check if the swap limit is enabled:
+8. After the Supernode is turned on, check if the swap limit is enabled:
 
    ```bash
    docker info
