--- a/src/content/docs/ecosystem/validators/validator-setup.mdx
+++ b/src/content/docs/ecosystem/validators/validator-setup.mdx
@@ -188,7 +188,7 @@ import { PostRegistrationChecklist } from "../../../../components/PostRegistrati
 
     ### 2.3 Configure Network
 
-    It's required to setup VPN between supernodes and SGX server. Ports 1026-1031 should open only to SKALE Supernodes, not public ports should be accessible by supernode.
+    It's required to setup VPN between supernodes and SGX server. Ports 1026-1031 should open only to SKALE supernodes, not public ports should be accessible by supernode.
 
     <Aside type="note">
     SGXWallet can support up to <strong>5</strong> SKALE supernodes. If you have more, you should setup additional server.
@@ -420,7 +420,7 @@ import { PostRegistrationChecklist } from "../../../../components/PostRegistrati
     </Aside>
 
     After Setting up SGX Wallet and create certifications, validators can download the SKALE Node CLI executables register and maintain your SKALE supernode.
-    This process downloads docker container images from docker hub and spins up SKALE Supernode functionalities. Some base containers such as SKALE Admin,
+    This process downloads docker container images from docker hub and spins up SKALE supernode functionalities. Some base containers such as SKALE Admin,
     Bounty, TransactionManager will be created during installation for each supernode.
 
     This document contains instructions on how to setup supernode using SKALE Node CLI.
