--- a/src/content/docs/builders/tools/nfts/dripverse.mdx
+++ b/src/content/docs/builders/tools/nfts/dripverse.mdx
@@ -2,7 +2,7 @@
 title: Dripverse
 description: Intro to Dripverse
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Dripverse allows the easy creation of NFTs, collections as well as trade them on their market. 
