--- a/src/content/docs/builders/tools/nfts/keepsake.mdx
+++ b/src/content/docs/builders/tools/nfts/keepsake.mdx
@@ -2,7 +2,7 @@
 title: KeepSake
 description: Intro to KeepSake
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Keepsake is an NFT marketplace that incorporates unique features of the SKALE ecosystem, enhancing user navigation. Notably, it includes an embedded SKALE native bridging feature, allowing users to bridge various tokens between SKALE chains at no cost."
