--- a/src/content/docs/builders/tools/nfts/kredeum.mdx
+++ b/src/content/docs/builders/tools/nfts/kredeum.mdx
@@ -2,7 +2,7 @@
 title: Kredeum
 description: Intro to Kredeum
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Kredeum is a factory to create, buy, sell & swap NFTs with your own collections."
