--- a/src/content/docs/builders/tools/nfts/reservoir.mdx
+++ b/src/content/docs/builders/tools/nfts/reservoir.mdx
@@ -2,7 +2,7 @@
 title: Reservoir NFT API
 description: Intro to reservoir NFT API
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Reservoir APIs offer comprehensive endpoints for developing NFT applications.
