--- a/src/content/docs/builders/tools/nfts/pixelrealm.mdx
+++ b/src/content/docs/builders/tools/nfts/pixelrealm.mdx
@@ -3,7 +3,7 @@ title: Pixel Realm
 description: Intro to Pixelrealm
 ---
 
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Pixel Realm is a multichain NFT marketplace and launchpad."
