--- a/src/content/docs/builders/tools/nfts/snag.mdx
+++ b/src/content/docs/builders/tools/nfts/snag.mdx
@@ -2,7 +2,7 @@
 title: Snag
 description: Intro to Snag
 ---
-import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph=""
